added thread model

--- a/Day_10/ipfs_app/index.html
+++ b/Day_10/ipfs_app/index.html
@@ -24,6 +24,6 @@
     </label>
 </p>
 <div id="log" style="width: 100%;"></div>
-<script src="http://localhost:8080/ipfs/QmedfYUsGR9kSrM8RgKtVoRPwNmYDwaRMeQjZzzayMC2cY"></script>
+<script src="https://ipfs.io/ipfs/QmedfYUsGR9kSrM8RgKtVoRPwNmYDwaRMeQjZzzayMC2cY"></script>
 </body>
 </html>
